# minimap2_fpga

manymap/micro-benchmark/: Makefile  cigar_glb.cu  micro.h  test_cpu_730-5.sh  test_gpu_gpu-server-5.sh
manymap/micro-benchmark/730-server-5/: cpu_avx2  cpu_sse2  cpu_sse41  ksw_avx2  ksw_sse2  ksw_sse41
manymap/micro-benchmark/gpu-server-5/: gpu_10k  gpu_16k  gpu_1k  gpu_20k  gpu_2k  gpu_32k  gpu_4k  gpu_8k
minimap2_fpga_pu16/: .gitignore  PU4_sim_PE1.wcfg  component.xml  minimap_fpga.xpr  pkt_sim.wcfg  tb_max_bt_result_behav.wcfg
minimap2_fpga_pu16/component/minimap2_cigar_v2/: component.xml
minimap2_fpga_pu16/minimap_fpga.ip_user_files/mem_init_files/: 128K.coe  fpga_input_128k_8_12bp.coe  fpga_input_128k_8_200bp.coe  fpga_input_128k_8_20bp_ram.coe  fpga_input_128k_8_30bp_ram.coe  fpga_input_128k_8_5bp.coe  fpga_input_128k_8_800bp.coe  fpga_input_test32.coe  fpga_input_test64.coe  fpga_input_test_8_1000bp_7.coe  fpga_input_test_8_100bp_1.coe  fpga_input_test_8_12bp_7.coe  fpga_input_test_8_20bp_7.coe  fpga_input_test_8_30bp_1.coe  fpga_input_test_8_400bp_1.coe  fpga_input_test_8_5bp_1.coe  fpga_input_test_8_80bp_1.coe  fpga_input_test_8_80bp_7.coe  fpga_input_test_8_8bp_1.coe  ram_9600x128.mif  (+3 more)
minimap2_fpga_pu16/xgui/: axi_master_v1_0.tcl
minimap2_test/: ByteBuffer.cpp  CMakeLists.txt  cpu_test.cpp  cpu_test.h  final_test_data_in.cpp  final_test_data_in.h  fpga_sw.c  fpga_sw.h  fpga_test.cpp  fpga_test.h  ksw2.h  ksw2_extd2_sse.c  main.cpp  queue_ctrl.h  result_package_test.cpp  sim_data_in.cpp  sim_data_in.h
minimap2_test/include/: ByteBuffer.hpp
(+911 files in other folders)
